fix wrapping post title

--- a/.mozilla/firefox/ben/chrome/userContent.css
+++ b/.mozilla/firefox/ben/chrome/userContent.css
@@ -169,7 +169,9 @@
     width: 70px !important;
     flex-shrink: 0 !important;
   }
-  
+  .entry {
+    flex-wrap: nowrap !important;
+  }
 
   /* header area */
   #header-img {
